--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-measure": "^2.0.0",
     "react-measure-it": "^0.1.2",
     "react-redux": "^5.0.7"
   },
