--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "James Ford <psyked84@gmail.com>",
   "dependencies": {
+    "color": "^3.1.0",
     "delta-e": "^0.0.7",
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
